--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,6 +5,7 @@ repositories {
     flatDir {
         dirs 'libs'
     }
+    maven { url 'https://maven.fabric.io/public' }
 }
 
 android {
@@ -40,5 +41,12 @@ dependencies {
 
     // Displaying images
     compile 'com.github.bumptech.glide:glide:3.6.1'
+
+    //Firebase DB
+    compile 'com.google.firebase:firebase-database:10.2.0'
+    compile 'com.google.firebase:firebase-auth:10.2.0'
+    compile 'com.google.firebase:firebase-storage:10.2.0'
+
+    compile 'com.firebaseui:firebase-ui-auth:1.2.0'
 }
 apply plugin: 'com.google.gms.google-services'
